--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brokensql",
   "version": "1.0.0",
-  "description": "",
+  "description": "Need to install express, mysql, and body-parse",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,7 +19,9 @@
   "dependencies": {
     "body-parse": "^0.1.0",
     "body-parser": "^1.19.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "mysql": "^2.18.1",
     "node": "^14.4.0"
   }
